[gd_scene load_steps=3 format=3 uid="uid://budofqelhyqlw"]

[ext_resource type="Script" path="res://Scripts/HUD_Confirm_Rent_House.gd" id="1_0scv7"]

[sub_resource type="LabelSettings" id="LabelSettings_bw4ws"]
font_size = 30

[node name="HUD_Confirm_Rent_House" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 143.0
offset_top = 109.0
offset_right = -118.0
offset_bottom = -358.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0scv7")

[node name="BG_Color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.572549, 0.443137, 0.203922, 0.811765)

[node name="Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -362.0
offset_right = 362.0
offset_bottom = 174.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_bw4ws")
horizontal_alignment = 1

[node name="ConfirmBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -75.0
offset_right = 166.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Rent"

[node name="CancelBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -75.0
offset_right = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Cancel"

[connection signal="pressed" from="ConfirmBtn" to="." method="_on_confirm_btn_pressed"]
[connection signal="pressed" from="CancelBtn" to="." method="_on_cancel_btn_pressed"]
